# sg-lib

./: .CMakeLists.txt.swp  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  Makefile  README.md  rebuild.sh  sgx_tlib.mk
apps/nss/: CMakeLists.txt  README.md  bsd-nss.c  build.sh  main.c  nss_sg.c  nss_sg.h  nss_test.c  test-pwd.c  test.c
apps/pam/: README.md  requests_sg.h
apps/pam/client/: CMakeLists.txt  client_ipc.h  main.c
apps/pam/common/: ipc_msg.h
apps/pam/pam-app/: CMakeLists.txt  conv.c  pam_app.c  passwd_sg.c
apps/pam/pam-module/: .pam_example.c.swp  CMakeLists.txt  build.sh  messaging.c  pam_example.c  pam_module.c  pam_sg.c  pam_util.c  pam_util.h  policy_errlist.h  sgd_message.h
apps/pam/server/: CMakeLists.txt
apps/pam/server/App/: App.c  Enclave_u.c
apps/pam/server/Enclave/: name_service.c  name_service.edl  sg_interface.c
apps/pam/src/: client_ipc.c  ipc_util.h
apps/sg_nss/: .nss_sg.c.swp  CMakeLists.txt  README.md  build.sh  nss_sg.c  nss_sg.h
apps/sg_nss/src/: ipc_util.c
apps/sg_nss/test/: build.sh  main.c
apps/u2f/: CMakeLists.txt  Makefile  common.h
apps/u2f/App/: CMakeCache.txt  Enclave_u.c  Enclave_u.h  Makefile  cmake_install.cmake  main.c  stdfunc.c  u2f_utils.c  u2f_utils.h  u2fdev.c  u2fdev.h
apps/u2f/Enclave/: Enclave.c  Enclave.edl  Enclave_t.c  Enclave_t.h  br_ec_key.c  br_ec_key.h  key.pb-c.h  stdfunc.c
apps/u2f/enclave/: enclave.c  enclave.lds  enclave.pem  key.pb-c.c  stdfunc.c  stdfunc.edl  stdfunc.h
apps/u2f/old/: Makefile  old_makefile.mk
clients/: .CMakeLists.txt.swp  .sg_getuserby.c.swp  CMakeLists.txt  sg_authuser.c  sg_get.c  sg_getuserby.c  sg_put.c  sg_putuser.c  sg_save.c  util.c  util.h
common/: .sg_common.c.swp  base64.c  errlist.c  errlist.h  key.proto  map.c  sg_common.c  sgx_errlist.c  xmem.c
common/not_needed/: br_ec_key.c
include/: attester.h  ca.h  challenger.h  common.h  db.h  errlist.h  ias_ra.h  keys.h  networking.edl  networking.h  ra_tls.h  sg.edl  sg.h  sg.pb-c.h  sg_common.h  sg_config.h  sg_network.h  sg_stdfunc.edl  sg_stdfunc.h  sg_t.h  sg_u.h  sg_updates.h  store.h  vvec.h  wolfssl_enclave.h  xmem.h
lib/: libpolicy  libsgd
lib/libpolicy/old/: policy.h
lib/libsg/: .CMakeLists.txt.swp  CMakeLists.txt  README.md
lib/libsg/common/: base64.h  bearssl_wrapper.c  buffer.c  buffer.h  config.c  config.h  config.pb-c.c  config.pb-c.h  config.proto  errlist.h  map.c  map.pb-c.c  map.proto
lib/libsg/include/: attest.edl  attest_t.h  bearssl_wrapper.h  config.h  config.pb-c.h  errlist.h  fileio.edl  fileio.h  keycert.pb-c.h  map.h  map.pb-c.h  networking.edl  networking.h  policy.h  policy_defs.h  policy_errlist.h  policy_util.h  protocol.h  sg.edl  sg.h  sg_defs.h  sg_messages.h  sg_stdfunc.h  sg_t.h  sg_u.h  sgx_errlist.h  stdfunc.h  stdfunc_t.h  store.h  store.pb-c.h  vvec.pb-c.h  wolfssl_enclave.edl  wolfssl_enclave_t.h
lib/libsg/trusted/: .sg.c.swp  .sg.h.swp  .sg_network.c.swp  .sg_util.c.swp  \  db.c  db.h  (+16 more)
lib/libsg/trusted/libpolicy/: .policy.c.swp  .policy_defs.h.swp  .policy_util.c.swp  CMakeLists.txt  policy.c  policy.h  policy_defs.h  policy_errlist.h  policy_init.c  policy_util.c  policy_util.h
lib/libsg/trusted/libpolicy/old/: notes.txt
lib/libsg/trusted/libpolicy/test/: CMakeLists.txt  main.c
lib/libsg_ecalls/: CMakeLists.txt  README.txt
scripts/: build_ratls.sh  edger8r_header.sh  install_instructions.sh  patch_tiny_regex_sgx.patch  yas.go
scripts/start_jails/: client.exp  main.exp  main.py  single.exp  two_jails.exp
scripts/wolfssl/: README.md  setup_wolfssl.sh
server/: CMakeLists.txt  config.ini  jail_config.ini  old_CMakeLists.txt  rebuild.sh
server/App/: App.c  Enclave_u.c  Enclave_u.h  Init.c  ipc_util.c  ipc_util.h  process.c  sg_interface.c  sg_interface.h
server/Enclave/: .Enclave.c.swp  Enclave.c  Enclave.edl  Enclave_t.c  Enclave_t.h  name_service.c  sg_interface.c  sg_interface.edl
sg-ipc/: TODO.txt
tests/: CMakeLists.txt
tests/Simple/: CMakeLists.txt
tests/Simple/Enclave/: Enclave_t.h
tests/SimpleC/: '  CMakeLists.txt
tests/SimpleC/App/: App.c  App.cpp  App.h  Enclave_u.c  Enclave_u.h  sg_interface.h
tests/SimpleC/Enclave/: .Enclave.c.swp  Enclave.c  Enclave.edl  Enclave_t.c  Enclave_t.h
tests/SimpleCpp/: CMakeLists.txt
tests/SimpleCpp/App/: .App.cpp.swp  App.cpp  App.h
tests/SimpleCpp/Enclave/: Enclave_t.c
tests/config_test/: build.sh  config.h  main.c  test.ini
tests/db/: Makefile  \  app  main.c
tests/pam/: README.md  build_app.sh  pam_example.config  requests_sg.h
tests/pam/client/: CMakeLists.txt  ipc_util.c  main.c
tests/pam/common/: ipc_msg.c  ipc_msg.h
tests/pam/pam-app/: pam_app.c
tests/pam/pam-module/: pam_module.c
tests/pam/server/: CMakeLists.txt
tests/pam/server/App/: .App.c.swp  .ipc_util.c.swp  App.c  Enclave_u.c  Enclave_u.h  ipc_util.c  ipc_util.h  name_service.c
tests/pam/server/Enclave/: .Enclave.c.swp  Enclave.c  Enclave.edl  Enclave_t.c  Enclave_t.h  name_service.c
tests/pam_module/: CMakeLists.txt  pam_sg.c
tests/policy_test/: CMakeLists.txt  README.md  rebuild.sh
tests/policy_test/App/: App.c  Enclave_u.c  Enclave_u.h
tests/policy_test/Enclave/: .test_policy.c.swp  Enclave.c  Enclave.edl  Enclave_t.c  Enclave_t.h  test_policy.c  test_policy.edl
tests/policy_test/lib/libsgd/: CMakeLists.txt  sgd_frame.c  sgd_frame.h  sgd_message.h  sgd_request.c
trusted/: .sg.c.swp  .sg.h.swp  .sg_auth.c.swp  .sg_network.c.swp  db.c  db.h  fileio.edl  networking.edl  sg.c  sg.conf  sg.h  sg.pb-c.c  sg.proto  sg_auth.c  sg_auth.h  sg_messages.c  sg_network.c  sg_stdfunc.c  sg_stdfunc.h  sg_util.c  sg_util.h
trusted/internal/: networking_internal.h
trusted/libpolicy/: policy.h
trusted/librassl/: .nfs.0c2e87ec.ffff81d74.4  .ra_tls.c.swp  attester.c  attester_helper.c  challenger.c  challenger_helper.c  challenger_helper.h  keycert.pb-c.c  ra_tls.c  ra_tls.h  ra_tls_util.c  wolfssl_enclave.c  wolfssl_enclave.h
trusted/libstore/: store.c  store.h  store.pb-c.c  vvec.pb-c.c  vvec.proto
untrusted/: fileio.c  networking.c  sg_stdfunc.c
untrusted/librassl/: wolfssl_helper.c
(+68 files in other folders)
